crates/dsql-core/tests/it/snapshots/it__completions__aggregate_bodies_offer_contextual_functions_and_operands.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "format!(\"functions:\\n{functions}\\n\\noperands:\\n{operands}\\n\\ngroup keys:\\n{group_keys}\")"
---
functions:
Keyword count (aggregate function)
Keyword exists (aggregate function)
Keyword max (aggregate function)
Keyword min (aggregate function)

operands:
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)

group keys:
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)
