crates/dsql-core/tests/it/snapshots/it__completions__bounded_dynamic_inputs_complete_capability_presets.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "format!(\"predicate:\\n{predicate}\\n\\norder:\\n{order}\")"
---
predicate:
Keyword indexed
Keyword searchable
Keyword selected
Keyword selected_indexed

order:
Keyword indexed
Keyword searchable
Keyword selected
Keyword selected_indexed
