crates/dsql-core/tests/it/snapshots/it__completions__bounded_dynamic_inputs_complete_the_selected_surface_keyword.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "format!(\"predicate:\\n{predicate}\\n\\norder:\\n{order}\")"
---
predicate:
Keyword selected

order:
Keyword selected
