crates/dsql-core/tests/it/snapshots/it__completions__clause_list_offers_clause_keywords.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"query Q {\\n  users(|) {\\n    id\\n  }\\n}\\n\").await"
---
Keyword filter
Keyword limit
Keyword offset
Keyword order
Keyword where
