crates/dsql-core/tests/it/snapshots/it__completions__contextual_identifier_columns_complete_and_keep_predicate_context.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "format!(\"fields:\\n{}\\n\\nafter .exists:\\n{}\", render_completion_items(&fields),\nrender_completion_items(&operators),)"
---
fields:
Column amount (numeric)
Column enabled (boolean)
Column exists (int)
Column in (int)
Column is (int)
Column not (int)
Column ratio (float)

after .exists:
Column amount (numeric)
Column enabled (boolean)
Column exists (int)
Column in (int)
Column is (int)
Column not (int)
Column ratio (float)
Scope . (current scope)
Scope .. (parent scope)
Scope ~ (root scope)
Operator !=
Operator <
Operator <=
Operator ==
Operator >
Operator >=
Keyword and
Keyword asc
Keyword desc
Keyword like
Keyword limit
Keyword offset
Keyword or
Keyword order
Keyword where
