crates/dsql-core/tests/it/snapshots/it__completions__definition_headers_complete_inferred_input_names.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "format!(\"top-level:\\n{top_level}\\n\\nstructured:\\n{structured}\")"
---
top-level:
Variable limit (int at params.limit)

structured:
Variable search (text at input.users.clause.where.name.search)
