crates/dsql-core/tests/it/snapshots/it__completions__document_root_offers_definition_keywords.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"|\").await"
---
Keyword condition
Keyword filter
Keyword fragment
Keyword query
