crates/dsql-core/tests/it/snapshots/it__completions__order_by_offers_columns_and_directions.snap
---
source: crates/dsql-core/tests/it/completions.rs
expression: "completions(\"query Q {\\n  users(order by |) {\\n    id\\n  }\\n}\\n\").await"
---
Column created_at (timestamptz)
Column email (text)
Column id (uuid)
Column name (text)
